--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ button:disabled:hover::after {
 <label>Nombre del vendedor:</label>
 <input type="text" id="vendedor" style="width:100%; padding:8px; margin-bottom:15px;">
 
-<label>Nombre del cliente:</label>
+<label>Nombre de la compañía:</label>
 <input type="text" id="cliente" style="width:100%; padding:8px; margin-bottom:25px;">
 <label>DOT:</label>
 <input type="text" id="dot" style="width:100%; padding:8px; margin-bottom:25px;">
@@ -582,3 +582,4 @@ if (selectAll) {
 </body>
 
 </html>
+
