--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@ button:disabled:hover::after {
 <input type="text" id="dot" style="width:100%; padding:8px; margin-bottom:25px;">
 
 <!-- NUEVO: checkbox maestro -->
-<div class="pregunta">
+<!--<div class="pregunta">
     <input type="checkbox" id="selectAll">
     <label for="selectAll">Seleccionar / deseleccionar todas las validaciones</label>
 </div>
 
-<hr>
+<hr>-->
 
         <h3 style="color:#FFD700;">SECCIÓN 1: Validar ingreso de información de la compañía</h3>
 <div id="seccion1">
@@ -582,4 +582,5 @@ if (selectAll) {
 </body>
 
 </html>
+
 
