--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ button:disabled:hover::after {
 <!--<div class="pregunta">
     <input type="checkbox" id="selectAll">
     <label for="selectAll">Seleccionar / deseleccionar todas las validaciones</label>
-</div>
+</div>-->
 
-<hr>-->
+<hr>
 
         <h3 style="color:#FFD700;">SECCIÓN 1: Validar ingreso de información de la compañía</h3>
 <div id="seccion1">
@@ -582,5 +582,6 @@ if (selectAll) {
 </body>
 
 </html>
+
 
 
